--- a/public/html/tablep.html
+++ b/public/html/tablep.html
@@ -14,7 +14,7 @@
 			<td>{{ p.description }}</td>
 			<td>{{ p.category }}</td>
 			<td>{{ p.price }}</td>
-			<td><a href="/#/view4" ng-click="sendId({id: p.id})">Show</a></td>
+			<td><a href="/#/{{moveto}}" ng-click="sendId({id: p.id})">Show</a></td>
 		</tr>
 	</tbody>
 </table>
